// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components /forms SelectField 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="makeStyles-dropdown-623"
    onClick={[Function]}
  >
    <div
      className="MuiInputBase-root-627 makeStyles-root-624 makeStyles-root-626"
      onClick={[Function]}
      role="button"
    >
      <input
        autoComplete="off"
        className="MuiInputBase-input-637 makeStyles-input-625"
        name="SELECT_FIELD_ATTR"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        readOnly={true}
        type="text"
        value=""
      />
    </div>
    <img
      alt="Phone Menu"
      className="makeStyles-root-643 makeStyles-noShrink-644"
      height="5"
      src="selectChevron.svg"
      width="8"
    />
  </div>
</form>
`;

exports[`Storyshots Components Buttons 1`] = `
<div
  className="MuiBox-root-1 MuiBox-root-2"
>
  <div
    className="MuiBox-root-1 MuiBox-root-3"
  >
    <button
      className="MuiButtonBase-root-21 MuiButton-root-4 MuiButton-contained-12 MuiButton-containedPrimary-13"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-5"
      >
        Hower
      </span>
    </button>
  </div>
  <div
    className="MuiBox-root-1 MuiBox-root-24"
  >
    <button
      className="MuiButtonBase-root-21 MuiButtonBase-disabled-22 MuiButton-root-4 MuiButton-contained-12 MuiButton-containedPrimary-13 MuiButton-disabled-16"
      disabled={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="-1"
      type="button"
    >
      <span
        className="MuiButton-label-5"
      >
        Disabled
      </span>
    </button>
  </div>
  <div
    className="MuiBox-root-1 MuiBox-root-25"
  >
    <button
      className="MuiButtonBase-root-21 MuiButton-root-4 MuiButton-contained-12 MuiButton-containedSecondary-14"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-5"
      >
        Cancel
      </span>
    </button>
  </div>
  <div
    className="MuiBox-root-1 MuiBox-root-26"
  >
    <button
      className="MuiButtonBase-root-21 MuiButton-root-4 MuiButton-text-6 MuiButton-textPrimary-7"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-5"
      >
        Back
      </span>
    </button>
  </div>
  <div
    className="MuiBox-root-1 MuiBox-root-27"
  >
    <button
      className="MuiButtonBase-root-21 MuiButton-root-4 MuiButton-contained-12 MuiButton-containedPrimary-13 MuiButton-fullWidth-20"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-5"
      >
        Full Width
      </span>
    </button>
  </div>
  <div
    className="MuiBox-root-1 MuiBox-root-28"
  >
    <button
      aria-label="Export as CSV"
      className="MuiButtonBase-root-21 MuiFab-root-33 makeStyles-root-29 MuiFab-extended-37 makeStyles-extended-30 MuiFab-secondary-36 makeStyles-secondary-32 MuiFab-sizeSmall-41 makeStyles-sizeSmall-31"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiFab-label-34"
      >
        <div
          className="MuiBox-root-1 MuiBox-root-43"
        >
          <img
            alt="Download"
            className="makeStyles-root-44"
            height={16}
            src="download.svg"
            width={16}
          />
        </div>
        <div
          className="MuiBox-root-1 MuiBox-root-49"
        >
          <h6
            className="MuiTypography-root-52 MuiTypography-subtitle2-64 MuiTypography-colorTextPrimary-77"
          >
            Download
          </h6>
        </div>
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots Components Hairline 1`] = `
Array [
  <div
    className="MuiBox-root-92 MuiBox-root-93"
  >
    <p
      className="MuiTypography-root-96 MuiTypography-body1-98"
    >
      Regular hairline without margin
    </p>
    <div
      className="MuiBox-root-92 MuiBox-root-126"
    />
  </div>,
  <div
    className="MuiBox-root-92 MuiBox-root-127"
  >
    <p
      className="MuiTypography-root-96 MuiTypography-body1-98"
    >
      Regular hairline with unit 1 margin
    </p>
    <div
      className="MuiBox-root-92 MuiBox-root-128"
    />
  </div>,
  <div
    className="MuiBox-root-92 MuiBox-root-129"
  >
    <p
      className="MuiTypography-root-96 MuiTypography-body1-98"
    >
      Regular hairline with unit 4 margin
    </p>
    <div
      className="MuiBox-root-92 MuiBox-root-130"
    />
  </div>,
  <div
    className="MuiBox-root-92 MuiBox-root-131"
  >
    <p
      className="MuiTypography-root-96 MuiTypography-body1-98"
    >
      Hairline with custom color
    </p>
    <div
      className="MuiBox-root-92 MuiBox-root-132"
    />
  </div>,
]
`;

exports[`Storyshots Components Images 1`] = `
<div
  className="MuiBox-root-133 MuiBox-root-134"
>
  <div
    className="MuiBox-root-133 MuiBox-root-135"
  >
    <img
      alt="Iov Logo"
      className="makeStyles-root-136"
      src="iov-logo.png"
    />
  </div>
  <div
    className="MuiBox-root-133 MuiBox-root-141"
  >
    <div
      className="MuiBox-root-133 MuiBox-root-142"
    >
      <img
        alt="Download"
        className="makeStyles-root-136"
        height={16}
        src="download.svg"
        width={16}
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Components Layout 1`] = `
<div
  className="MuiBox-root-143 MuiBox-root-144"
>
  <div
    className="MuiBox-root-143 MuiBox-root-145"
  >
    <h4
      className="MuiTypography-root-148 MuiTypography-h4-156 MuiTypography-colorPrimary-171 makeStyles-inline-146"
    >
      Title
    </h4>
    <h4
      className="MuiTypography-root-148 MuiTypography-h4-156 makeStyles-inline-146"
    >
       
      storybook
    </h4>
  </div>
  <div
    className="MuiBox-root-143 MuiBox-root-178"
  >
    <h6
      className="MuiTypography-root-148 MuiTypography-h6-158"
    >
      Layout content
    </h6>
  </div>
  <div
    className="MuiBox-root-143 MuiBox-root-179"
  />
  <div
    className="MuiBox-root-143 MuiBox-root-180"
  >
    <img
      alt="IOV logo"
      className="makeStyles-root-181"
      height={39}
      src="iov-logo.png"
      width={84}
    />
  </div>
</div>
`;

exports[`Storyshots Components Switch 1`] = `
Array [
  <div
    className="MuiBox-root-186 MuiBox-root-187"
  >
    <label
      className="MuiFormControlLabel-root-188"
    >
      <span
        className="MuiSwitch-root-194"
      >
        <span
          aria-disabled={false}
          className="MuiButtonBase-root-216 MuiIconButton-root-207 MuiPrivateSwitchBase-root-203 MuiSwitch-switchBase-195 MuiSwitch-colorPrimary-196"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={null}
        >
          <span
            className="MuiIconButton-label-215"
          >
            <span
              className="MuiSwitch-thumb-201"
            />
            <input
              className="MuiPrivateSwitchBase-input-206 MuiSwitch-input-200"
              onChange={[Function]}
              type="checkbox"
            />
          </span>
        </span>
        <span
          className="MuiSwitch-track-202"
        />
      </span>
      <span
        className="MuiTypography-root-219 MuiTypography-body1-221 MuiFormControlLabel-label-193"
      >
        With label
      </span>
    </label>
  </div>,
  <div
    className="MuiBox-root-186 MuiBox-root-249"
  >
    <label
      className="MuiFormControlLabel-root-188"
    >
      <span
        className="MuiSwitch-root-194"
      >
        <span
          aria-disabled={false}
          className="MuiButtonBase-root-216 MuiIconButton-root-207 MuiPrivateSwitchBase-root-203 MuiSwitch-switchBase-195 MuiSwitch-colorPrimary-196"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={null}
        >
          <span
            className="MuiIconButton-label-215"
          >
            <span
              className="MuiSwitch-thumb-201"
            />
            <input
              className="MuiPrivateSwitchBase-input-206 MuiSwitch-input-200"
              onChange={[Function]}
              type="checkbox"
            />
          </span>
        </span>
        <span
          className="MuiSwitch-track-202"
        />
      </span>
      <span
        className="MuiTypography-root-219 MuiTypography-body1-221 MuiFormControlLabel-label-193"
      />
    </label>
  </div>,
]
`;

exports[`Storyshots Components Toasts 1`] = `
Array [
  <div
    className="MuiBox-root-343 MuiBox-root-344"
  >
    <div
      className="MuiBox-root-343 MuiBox-root-345"
    >
      <div
        className="MuiBox-root-343 MuiBox-root-346"
      >
        <button
          className="MuiButtonBase-root-364 MuiButton-root-347 MuiButton-contained-355 MuiButton-containedPrimary-356"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-348"
          >
            Click to generate INFO toast
          </span>
        </button>
      </div>
      <p
        className="MuiTypography-root-369 MuiTypography-body1-371"
      >
        This should generate...
      </p>
      <div
        className="MuiTypography-root-369 MuiTypography-body2-370 MuiPaper-root-410 MuiPaper-elevation6-418 MuiSnackbarContent-root-407 makeStyles-info-401"
        role="alertdialog"
      >
        <div
          className="MuiSnackbarContent-message-408"
        >
          <div
            className="MuiBox-root-343 MuiBox-root-437 makeStyles-message-405"
          >
            <div
              className="makeStyles-iconBackground-406"
            >
              <img
                alt="Toast icon"
                className="makeStyles-root-438"
                height={24}
                src="success.svg"
                width={24}
              />
            </div>
            <h6
              className="MuiTypography-root-369 MuiTypography-subtitle1-380 makeStyles-info-401"
            >
              Hi INFO
            </h6>
          </div>
        </div>
        <div
          className="MuiSnackbarContent-action-409"
        >
          <button
            aria-label="Close"
            className="MuiButtonBase-root-364 MuiIconButton-root-443 MuiIconButton-colorSecondary-448"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiIconButton-label-451"
            >
              <img
                alt="Close"
                className="makeStyles-root-438"
                height={20}
                src="close.svg"
                width={20}
              />
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      className="MuiBox-root-343 MuiBox-root-452"
    >
      <div
        className="MuiBox-root-343 MuiBox-root-453"
      >
        <button
          className="MuiButtonBase-root-364 MuiButton-root-347 MuiButton-contained-355 MuiButton-containedPrimary-356"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-348"
          >
            Click to generate WARN toast
          </span>
        </button>
      </div>
      <p
        className="MuiTypography-root-369 MuiTypography-body1-371"
      >
        This should generate...
      </p>
      <div
        className="MuiTypography-root-369 MuiTypography-body2-370 MuiPaper-root-410 MuiPaper-elevation6-418 MuiSnackbarContent-root-407 makeStyles-warning-402"
        role="alertdialog"
      >
        <div
          className="MuiSnackbarContent-message-408"
        >
          <div
            className="MuiBox-root-343 MuiBox-root-454 makeStyles-message-405"
          >
            <div
              className="makeStyles-iconBackground-406"
            >
              <img
                alt="Toast icon"
                className="makeStyles-root-438"
                height={24}
                src="warning.svg"
                width={24}
              />
            </div>
            <h6
              className="MuiTypography-root-369 MuiTypography-subtitle1-380 makeStyles-warning-402"
            >
              Hi WARN
            </h6>
          </div>
        </div>
        <div
          className="MuiSnackbarContent-action-409"
        >
          <button
            aria-label="Close"
            className="MuiButtonBase-root-364 MuiIconButton-root-443 MuiIconButton-colorSecondary-448"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiIconButton-label-451"
            >
              <img
                alt="Close"
                className="makeStyles-root-438"
                height={20}
                src="close.svg"
                width={20}
              />
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      className="MuiBox-root-343 MuiBox-root-455"
    >
      <div
        className="MuiBox-root-343 MuiBox-root-456"
      >
        <button
          className="MuiButtonBase-root-364 MuiButton-root-347 MuiButton-contained-355 MuiButton-containedPrimary-356"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-348"
          >
            Click to generate ERROR toast
          </span>
        </button>
      </div>
      <p
        className="MuiTypography-root-369 MuiTypography-body1-371"
      >
        This should generate...
      </p>
      <div
        className="MuiTypography-root-369 MuiTypography-body2-370 MuiPaper-root-410 MuiPaper-elevation6-418 MuiSnackbarContent-root-407 makeStyles-error-400"
        role="alertdialog"
      >
        <div
          className="MuiSnackbarContent-message-408"
        >
          <div
            className="MuiBox-root-343 MuiBox-root-457 makeStyles-message-405"
          >
            <div
              className="makeStyles-iconBackground-406"
            >
              <img
                alt="Toast icon"
                className="makeStyles-root-438"
                height={24}
                src="error.svg"
                width={24}
              />
            </div>
            <h6
              className="MuiTypography-root-369 MuiTypography-subtitle1-380 makeStyles-error-400"
            >
              Hi ERR
            </h6>
          </div>
        </div>
        <div
          className="MuiSnackbarContent-action-409"
        >
          <button
            aria-label="Close"
            className="MuiButtonBase-root-364 MuiIconButton-root-443 MuiIconButton-colorSecondary-448"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiIconButton-label-451"
            >
              <img
                alt="Close"
                className="makeStyles-root-438"
                height={20}
                src="close.svg"
                width={20}
              />
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>,
  " ",
]
`;

exports[`Storyshots Components Tooltip 1`] = `
Array [
  <div
    className="MuiBox-root-260 MuiBox-root-261"
  >
    <div
      className="makeStyles-container-263"
      onClick={[Function]}
    >
      <img
        alt="Info"
        className="makeStyles-root-266"
        height={16}
        src="info_normal.svg"
        width={16}
      />
    </div>
  </div>,
  <div
    className="MuiBox-root-260 MuiBox-root-271"
  >
    <p
      className="MuiTypography-root-274 MuiTypography-body1-276 makeStyles-inline-272"
      style={
        Object {
          "marginRight": "4px",
        }
      }
    >
      Loooooooooooooooooooooooooooooooooong text
    </p>
    <div
      className="makeStyles-container-263"
      onClick={[Function]}
    >
      <img
        alt="Info"
        className="makeStyles-root-266"
        height={16}
        src="info_normal.svg"
        width={16}
      />
    </div>
  </div>,
]
`;

exports[`Storyshots Components Typography 1`] = `
Array [
  <h6
    className="MuiTypography-root-306 MuiTypography-subtitle1-317 MuiTypography-colorPrimary-329"
  >
    H4
  </h6>,
  <h4
    className="MuiTypography-root-306 MuiTypography-h4-314"
  >
    Main headings
  </h4>,
  <h6
    className="MuiTypography-root-306 MuiTypography-subtitle1-317 MuiTypography-colorPrimary-329"
  >
    H5
  </h6>,
  <h5
    className="MuiTypography-root-306 MuiTypography-h5-315"
  >
    Heading 2
  </h5>,
  <h6
    className="MuiTypography-root-306 MuiTypography-subtitle1-317 MuiTypography-colorPrimary-329"
  >
    H6
  </h6>,
  <h6
    className="MuiTypography-root-306 MuiTypography-h6-316"
  >
    Subheading
  </h6>,
  <h6
    className="MuiTypography-root-306 MuiTypography-subtitle1-317 MuiTypography-colorPrimary-329"
  >
    body1
  </h6>,
  <p
    className="MuiTypography-root-306 MuiTypography-body1-308"
  >
    Lorem ipsum dolor sit amet
  </p>,
  <h6
    className="MuiTypography-root-306 MuiTypography-subtitle1-317 MuiTypography-colorPrimary-329"
  >
    body2
  </h6>,
  <p
    className="MuiTypography-root-306 MuiTypography-body2-307"
  >
    Lorem ipsum dolor sit amet
  </p>,
  <h6
    className="MuiTypography-root-306 MuiTypography-subtitle1-317 MuiTypography-colorPrimary-329"
  >
    subtitle1
  </h6>,
  <h6
    className="MuiTypography-root-306 MuiTypography-subtitle1-317"
  >
    Text field label
  </h6>,
  <h6
    className="MuiTypography-root-306 MuiTypography-subtitle1-317 MuiTypography-colorPrimary-329"
  >
    subtitle2
  </h6>,
  <h6
    className="MuiTypography-root-306 MuiTypography-subtitle2-318"
  >
    Text field label
  </h6>,
  <h6
    className="MuiTypography-root-306 MuiTypography-subtitle1-317 MuiTypography-colorPrimary-329"
  >
    Inline styles
  </h6>,
  <h6
    className="MuiTypography-root-306 MuiTypography-subtitle2-318 MuiTypography-colorPrimary-329 makeStyles-inline-304"
  >
    First part of the text. 
  </h6>,
  <h6
    className="MuiTypography-root-306 MuiTypography-subtitle2-318 makeStyles-inline-304"
  >
    Second part of the text.
  </h6>,
]
`;

exports[`Storyshots Components/forms Form 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="MuiFormControl-root-469 MuiFormControl-marginNormal-470 MuiTextField-root-468"
  >
    <label
      className="MuiFormLabel-root-485 MuiInputLabel-root-473 MuiInputLabel-formControl-479 MuiInputLabel-animated-482 MuiInputLabel-shrink-481"
      data-shrink={true}
    >
      Unique Identifier
    </label>
    <div
      className="MuiInputBase-root-505 MuiOutlinedInput-root-492 MuiInputBase-formControl-506"
      onClick={[Function]}
    >
      <fieldset
        aria-hidden={true}
        className="MuiPrivateNotchedOutline-root-521 MuiOutlinedInput-notchedOutline-499"
        style={
          Object {
            "paddingLeft": 8,
          }
        }
      >
        <legend
          className="MuiPrivateNotchedOutline-legend-522"
          style={
            Object {
              "width": 0.01,
            }
          }
        >
          <span
            dangerouslySetInnerHTML={
              Object {
                "__html": "&#8203;",
              }
            }
          />
        </legend>
      </fieldset>
      <input
        aria-invalid={false}
        className="MuiInputBase-input-515 MuiOutlinedInput-input-500"
        disabled={false}
        name="textFieldUniqueIdentifier"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="Unique Identifier"
        required={false}
        type="text"
      />
    </div>
  </div>
  <div
    className="MuiBox-root-523 MuiBox-root-524"
  >
    <div
      className="makeStyles-dropdown-525"
      onClick={[Function]}
    >
      <div
        className="MuiInputBase-root-505 makeStyles-root-526 makeStyles-root-528"
        onClick={[Function]}
        role="button"
      >
        <input
          autoComplete="off"
          className="MuiInputBase-input-515 makeStyles-input-527"
          name="selectFieldUniqueIdentifier"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          readOnly={true}
          type="text"
          value=""
        />
      </div>
      <img
        alt="Phone Menu"
        className="makeStyles-root-529 makeStyles-noShrink-530"
        height="5"
        src="selectChevron.svg"
        width="8"
      />
    </div>
  </div>
  <button
    className="MuiButtonBase-root-551 MuiButtonBase-disabled-552 MuiButton-root-534 MuiButton-contained-542 MuiButton-containedPrimary-543 MuiButton-disabled-546"
    disabled={true}
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex="-1"
    type="submit"
  >
    <span
      className="MuiButton-label-535"
    >
      Submit
    </span>
  </button>
  <pre>
    {}
  </pre>
</form>
`;

exports[`Storyshots Components/forms TextFieldForm 1`] = `
<div
  className="MuiBox-root-554 MuiBox-root-555"
>
  <div
    className="MuiBox-root-554 MuiBox-root-556"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiFormControl-root-558 MuiFormControl-marginNormal-559 MuiTextField-root-557"
      >
        <label
          className="MuiFormLabel-root-574 MuiFormLabel-error-577 MuiInputLabel-error-565 MuiInputLabel-root-562 MuiInputLabel-formControl-568 MuiInputLabel-animated-571 MuiInputLabel-shrink-570"
          data-shrink={true}
        >
          Error
        </label>
        <div
          className="MuiInputBase-root-594 MuiOutlinedInput-root-581 MuiInputBase-error-600 MuiOutlinedInput-error-586 MuiInputBase-formControl-595"
          onClick={[Function]}
        >
          <fieldset
            aria-hidden={true}
            className="MuiPrivateNotchedOutline-root-610 MuiOutlinedInput-notchedOutline-588"
            style={
              Object {
                "paddingLeft": 8,
              }
            }
          >
            <legend
              className="MuiPrivateNotchedOutline-legend-611"
              style={
                Object {
                  "width": 0.01,
                }
              }
            >
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "&#8203;",
                  }
                }
              />
            </legend>
          </fieldset>
          <input
            aria-invalid={true}
            className="MuiInputBase-input-604 MuiOutlinedInput-input-589"
            defaultValue="Standard Error"
            disabled={false}
            name="field-with-error"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            type="text"
          />
        </div>
        <p
          className="MuiFormHelperText-root-612 MuiFormHelperText-contained-616 MuiFormHelperText-error-613"
        >
          This is an error message
        </p>
      </div>
    </form>
  </div>
  <div
    className="MuiBox-root-554 MuiBox-root-620"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiFormControl-root-558 MuiFormControl-marginNormal-559 MuiTextField-root-557"
      >
        <label
          className="MuiFormLabel-root-574 MuiInputLabel-root-562 MuiInputLabel-formControl-568 MuiInputLabel-animated-571 MuiInputLabel-shrink-570"
          data-shrink={true}
        >
          Filled
        </label>
        <div
          className="MuiInputBase-root-594 MuiOutlinedInput-root-581 MuiInputBase-formControl-595"
          onClick={[Function]}
        >
          <fieldset
            aria-hidden={true}
            className="MuiPrivateNotchedOutline-root-610 MuiOutlinedInput-notchedOutline-588"
            style={
              Object {
                "paddingLeft": 8,
              }
            }
          >
            <legend
              className="MuiPrivateNotchedOutline-legend-611"
              style={
                Object {
                  "width": 0.01,
                }
              }
            >
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "&#8203;",
                  }
                }
              />
            </legend>
          </fieldset>
          <input
            aria-invalid={false}
            className="MuiInputBase-input-604 MuiOutlinedInput-input-589"
            defaultValue="test*iov"
            disabled={false}
            name="field-filled"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            type="text"
          />
        </div>
      </div>
    </form>
  </div>
  <div
    className="MuiBox-root-554 MuiBox-root-621"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiFormControl-root-558 MuiFormControl-marginNormal-559 MuiTextField-root-557"
      >
        <label
          className="MuiFormLabel-root-574 MuiFormLabel-disabled-576 MuiInputLabel-disabled-564 MuiInputLabel-root-562 MuiInputLabel-formControl-568 MuiInputLabel-animated-571 MuiInputLabel-shrink-570"
          data-shrink={true}
        >
          Disabled
        </label>
        <div
          className="MuiInputBase-root-594 MuiOutlinedInput-root-581 MuiInputBase-disabled-597 MuiOutlinedInput-disabled-583 MuiInputBase-formControl-595"
          onClick={[Function]}
        >
          <fieldset
            aria-hidden={true}
            className="MuiPrivateNotchedOutline-root-610 MuiOutlinedInput-notchedOutline-588"
            style={
              Object {
                "paddingLeft": 8,
              }
            }
          >
            <legend
              className="MuiPrivateNotchedOutline-legend-611"
              style={
                Object {
                  "width": 0.01,
                }
              }
            >
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "&#8203;",
                  }
                }
              />
            </legend>
          </fieldset>
          <input
            aria-invalid={false}
            className="MuiInputBase-input-604 MuiOutlinedInput-input-589 MuiInputBase-disabled-597 MuiOutlinedInput-disabled-583"
            defaultValue="Disabled input"
            disabled={true}
            name="standard-disabled"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            type="text"
          />
        </div>
      </div>
    </form>
  </div>
  <div
    className="MuiBox-root-554 MuiBox-root-622"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiFormControl-root-558 MuiFormControl-marginNormal-559 MuiTextField-root-557"
      >
        <label
          className="MuiFormLabel-root-574 MuiInputLabel-root-562 MuiInputLabel-formControl-568 MuiInputLabel-animated-571 MuiInputLabel-shrink-570"
          data-shrink={true}
        >
          Empty
        </label>
        <div
          className="MuiInputBase-root-594 MuiOutlinedInput-root-581 MuiInputBase-formControl-595"
          onClick={[Function]}
        >
          <fieldset
            aria-hidden={true}
            className="MuiPrivateNotchedOutline-root-610 MuiOutlinedInput-notchedOutline-588"
            style={
              Object {
                "paddingLeft": 8,
              }
            }
          >
            <legend
              className="MuiPrivateNotchedOutline-legend-611"
              style={
                Object {
                  "width": 0.01,
                }
              }
            >
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "&#8203;",
                  }
                }
              />
            </legend>
          </fieldset>
          <input
            aria-invalid={false}
            className="MuiInputBase-input-604 MuiOutlinedInput-input-589"
            disabled={false}
            name="standard-with-placeholder"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="IOV or wallet address"
            required={false}
            type="text"
          />
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`Storyshots Routes/Account Show account status 1`] = `
<div
  className="MuiBox-root-648 MuiBox-root-649"
  id="/signup_first"
>
  <h4
    className="MuiTypography-root-652 MuiTypography-h4-660 MuiTypography-colorPrimary-675 makeStyles-inline-650"
  >
    New
  </h4>
  <h4
    className="MuiTypography-root-652 MuiTypography-h4-660 makeStyles-inline-650"
  >
     Account
  </h4>
  <div
    className="MuiBox-root-648 MuiBox-root-682"
  />
  <form
    onSubmit={[Function]}
  >
    <div
      className="makeStyles-dropdown-683"
      onClick={[Function]}
    >
      <div
        className="MuiInputBase-root-687 makeStyles-root-684 makeStyles-root-686"
        onClick={[Function]}
        role="button"
      >
        <input
          autoComplete="off"
          className="MuiInputBase-input-697 makeStyles-input-685"
          name="SELECT_FIELD_ATTR"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          readOnly={true}
          type="text"
          value=""
        />
      </div>
      <img
        alt="Phone Menu"
        className="makeStyles-root-703 makeStyles-noShrink-704"
        height="5"
        src="selectChevron.svg"
        width="8"
      />
    </div>
  </form>
  <div
    className="MuiBox-root-648 MuiBox-root-708"
  />
  <div
    className="MuiBox-root-648 MuiBox-root-709"
  >
    <div
      className="MuiBox-root-648 MuiBox-root-710"
    >
      acc
    </div>
    <div
      className="MuiBox-root-648 MuiBox-root-711"
    >
      acc
    </div>
    <div
      className="MuiBox-root-648 MuiBox-root-712"
    >
      acc
    </div>
  </div>
  <div
    className="MuiBox-root-648 MuiBox-root-713"
  />
  <div
    className="MuiBox-root-648 MuiBox-root-714"
  >
    <img
      alt="IOV logo"
      className="makeStyles-root-703"
      src="iov-logo.png"
    />
  </div>
</div>
`;

exports[`Storyshots Routes/Login Login page 1`] = `
<div
  className="MuiBox-root-722 MuiBox-root-723"
  id="/login"
>
  <div
    className="MuiBox-root-722 MuiBox-root-724"
  >
    <h4
      className="MuiTypography-root-727 MuiTypography-h4-735 MuiTypography-colorPrimary-750 makeStyles-inline-725"
    >
      Log
    </h4>
    <h4
      className="MuiTypography-root-727 MuiTypography-h4-735 makeStyles-inline-725"
    >
       
      In
    </h4>
  </div>
  <div
    className="MuiBox-root-722 MuiBox-root-757"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiBox-root-722 MuiBox-root-758"
      >
        <div
          className="MuiFormControl-root-760 MuiFormControl-marginNormal-761 MuiFormControl-fullWidth-763 MuiTextField-root-759"
        >
          <div
            className="MuiInputBase-root-777 MuiOutlinedInput-root-764 MuiInputBase-fullWidth-786 MuiInputBase-formControl-778"
            onClick={[Function]}
          >
            <fieldset
              aria-hidden={true}
              className="MuiPrivateNotchedOutline-root-793 MuiOutlinedInput-notchedOutline-771"
              style={
                Object {
                  "paddingLeft": 8,
                }
              }
            >
              <legend
                className="MuiPrivateNotchedOutline-legend-794"
                style={
                  Object {
                    "width": 0.01,
                  }
                }
              >
                <span
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "&#8203;",
                    }
                  }
                />
              </legend>
            </fieldset>
            <input
              aria-invalid={false}
              className="MuiInputBase-input-787 MuiOutlinedInput-input-772"
              disabled={false}
              name="passwordInputField"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Password"
              required={true}
              type="password"
            />
          </div>
        </div>
      </div>
      <div
        className="MuiBox-root-722 MuiBox-root-795"
      >
        <div
          className="MuiBox-root-722 MuiBox-root-796"
        >
          <button
            className="MuiButtonBase-root-814 MuiButtonBase-disabled-815 MuiButton-root-797 MuiButton-contained-805 MuiButton-containedPrimary-806 MuiButton-disabled-809 MuiButton-fullWidth-813"
            disabled={true}
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="-1"
            type="submit"
          >
            <span
              className="MuiButton-label-798"
            >
              Continue
            </span>
          </button>
        </div>
      </div>
    </form>
    <div
      className="MuiBox-root-722 MuiBox-root-817"
    >
      <div
        className="MuiBox-root-722 MuiBox-root-818"
      >
        <a
          href="/welcome"
          onClick={[Function]}
        >
          <h6
            className="MuiTypography-root-727 MuiTypography-subtitle2-739 MuiTypography-colorPrimary-750 makeStyles-inline-725 makeStyles-link-726"
          >
            Restore account
          </h6>
        </a>
      </div>
      <div
        className="MuiBox-root-722 MuiBox-root-819"
      >
        <a
          href="/welcome"
          onClick={[Function]}
        >
          <h6
            className="MuiTypography-root-727 MuiTypography-subtitle2-739 MuiTypography-colorPrimary-750 makeStyles-inline-725 makeStyles-link-726"
          >
            More options
          </h6>
        </a>
      </div>
    </div>
  </div>
  <div
    className="MuiBox-root-722 MuiBox-root-820"
  />
  <div
    className="MuiBox-root-722 MuiBox-root-821"
  >
    <img
      alt="IOV logo"
      className="makeStyles-root-822"
      height={39}
      src="iov-logo.png"
      width={84}
    />
  </div>
</div>
`;

exports[`Storyshots Routes/Recovery phrase Main 1`] = `
<div
  className="MuiBox-root-827 MuiBox-root-828"
  id="/recovery-phrase"
>
  <div
    className="MuiBox-root-827 MuiBox-root-829"
  >
    <h4
      className="MuiTypography-root-832 MuiTypography-h4-840 MuiTypography-colorPrimary-855 makeStyles-inline-830"
    >
      Recovery
    </h4>
    <h4
      className="MuiTypography-root-832 MuiTypography-h4-840 makeStyles-inline-830"
    >
       
      phrase
    </h4>
  </div>
  <div
    className="MuiBox-root-827 MuiBox-root-862"
  >
    <div
      className="MuiBox-root-827 MuiBox-root-863"
    >
      <h6
        className="MuiTypography-root-832 MuiTypography-subtitle2-844"
      >
        Your Recovery Phrase are 12 random words that are set in a particular order that acts as a tool to recover or back up your wallet on any platform.
      </h6>
    </div>
    <div
      className="MuiBox-root-827 MuiBox-root-864"
    >
      <button
        aria-label="Export as CSV"
        className="MuiButtonBase-root-879 MuiFab-root-869 makeStyles-root-865 MuiFab-extended-873 makeStyles-extended-866 MuiFab-secondary-872 makeStyles-secondary-868 MuiFab-sizeSmall-877 makeStyles-sizeSmall-867"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiFab-label-870"
        >
          <div
            className="MuiBox-root-827 MuiBox-root-882"
          >
            <img
              alt="Download"
              className="makeStyles-root-883"
              height={16}
              src="download.svg"
              width={16}
            />
          </div>
          <div
            className="MuiBox-root-827 MuiBox-root-888"
          >
            <h6
              className="MuiTypography-root-832 MuiTypography-subtitle2-844 MuiTypography-colorTextPrimary-857"
            >
              Export as .PDF
            </h6>
          </div>
        </span>
      </button>
    </div>
    <div
      className="MuiBox-root-827 MuiBox-root-889"
    >
      <p
        className="MuiTypography-root-832 MuiTypography-body1-834 makeStyles-inline-830"
      >
        
      </p>
    </div>
    <div
      className="MuiBox-root-827 MuiBox-root-890"
    >
      <div
        className="MuiBox-root-827 MuiBox-root-891"
      >
        <button
          className="MuiButtonBase-root-879 MuiButton-root-892 MuiButton-text-894 MuiButton-textPrimary-895 MuiButton-fullWidth-908"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-893"
          >
            Back
          </span>
        </button>
      </div>
    </div>
  </div>
  <div
    className="MuiBox-root-827 MuiBox-root-909"
  />
  <div
    className="MuiBox-root-827 MuiBox-root-910"
  >
    <img
      alt="IOV logo"
      className="makeStyles-root-883"
      height={39}
      src="iov-logo.png"
      width={84}
    />
  </div>
</div>
`;

exports[`Storyshots Routes/Signup New account page 1`] = `
<div
  className="MuiBox-root-921 MuiBox-root-922"
  id="/signup1"
>
  <div
    className="MuiBox-root-921 MuiBox-root-923"
  >
    <h4
      className="MuiTypography-root-926 MuiTypography-h4-934 MuiTypography-colorPrimary-949 makeStyles-inline-924"
    >
      New
    </h4>
    <h4
      className="MuiTypography-root-926 MuiTypography-h4-934 makeStyles-inline-924"
    >
       
      Account
    </h4>
  </div>
  <div
    className="MuiBox-root-921 MuiBox-root-956"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiBox-root-921 MuiBox-root-957"
      >
        <div
          className="MuiFormControl-root-959 MuiFormControl-marginNormal-960 MuiFormControl-fullWidth-962 MuiTextField-root-958"
        >
          <label
            className="MuiFormLabel-root-975 MuiFormLabel-required-980 MuiInputLabel-required-967 MuiInputLabel-root-963 MuiInputLabel-formControl-969 MuiInputLabel-animated-972 MuiInputLabel-shrink-971"
            data-shrink={true}
          >
            Account name
            <span
              className="MuiFormLabel-asterisk-981 MuiInputLabel-asterisk-968"
            >
               
              *
            </span>
          </label>
          <div
            className="MuiInputBase-root-995 MuiOutlinedInput-root-982 MuiInputBase-fullWidth-1004 MuiInputBase-formControl-996"
            onClick={[Function]}
          >
            <fieldset
              aria-hidden={true}
              className="MuiPrivateNotchedOutline-root-1011 MuiOutlinedInput-notchedOutline-989"
              style={
                Object {
                  "paddingLeft": 8,
                }
              }
            >
              <legend
                className="MuiPrivateNotchedOutline-legend-1012"
                style={
                  Object {
                    "width": 0.01,
                  }
                }
              >
                <span
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "&#8203;",
                    }
                  }
                />
              </legend>
            </fieldset>
            <input
              aria-invalid={false}
              className="MuiInputBase-input-1005 MuiOutlinedInput-input-990"
              disabled={false}
              name="accountNameField"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Account name"
              required={true}
              type="text"
            />
          </div>
        </div>
      </div>
      <div
        className="MuiBox-root-921 MuiBox-root-1013"
      >
        <div
          className="MuiFormControl-root-959 MuiFormControl-marginNormal-960 MuiFormControl-fullWidth-962 MuiTextField-root-958"
        >
          <label
            className="MuiFormLabel-root-975 MuiFormLabel-required-980 MuiInputLabel-required-967 MuiInputLabel-root-963 MuiInputLabel-formControl-969 MuiInputLabel-animated-972 MuiInputLabel-shrink-971"
            data-shrink={true}
          >
            Password
            <span
              className="MuiFormLabel-asterisk-981 MuiInputLabel-asterisk-968"
            >
               
              *
            </span>
          </label>
          <div
            className="MuiInputBase-root-995 MuiOutlinedInput-root-982 MuiInputBase-fullWidth-1004 MuiInputBase-formControl-996"
            onClick={[Function]}
          >
            <fieldset
              aria-hidden={true}
              className="MuiPrivateNotchedOutline-root-1011 MuiOutlinedInput-notchedOutline-989"
              style={
                Object {
                  "paddingLeft": 8,
                }
              }
            >
              <legend
                className="MuiPrivateNotchedOutline-legend-1012"
                style={
                  Object {
                    "width": 0.01,
                  }
                }
              >
                <span
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "&#8203;",
                    }
                  }
                />
              </legend>
            </fieldset>
            <input
              aria-invalid={false}
              className="MuiInputBase-input-1005 MuiOutlinedInput-input-990"
              disabled={false}
              name="passwordInputField"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Password"
              required={true}
              type="password"
            />
          </div>
        </div>
      </div>
      <div
        className="MuiBox-root-921 MuiBox-root-1014"
      >
        <div
          className="MuiFormControl-root-959 MuiFormControl-marginNormal-960 MuiFormControl-fullWidth-962 MuiTextField-root-958"
        >
          <label
            className="MuiFormLabel-root-975 MuiFormLabel-required-980 MuiInputLabel-required-967 MuiInputLabel-root-963 MuiInputLabel-formControl-969 MuiInputLabel-animated-972 MuiInputLabel-shrink-971"
            data-shrink={true}
          >
            Confirm Password
            <span
              className="MuiFormLabel-asterisk-981 MuiInputLabel-asterisk-968"
            >
               
              *
            </span>
          </label>
          <div
            className="MuiInputBase-root-995 MuiOutlinedInput-root-982 MuiInputBase-fullWidth-1004 MuiInputBase-formControl-996"
            onClick={[Function]}
          >
            <fieldset
              aria-hidden={true}
              className="MuiPrivateNotchedOutline-root-1011 MuiOutlinedInput-notchedOutline-989"
              style={
                Object {
                  "paddingLeft": 8,
                }
              }
            >
              <legend
                className="MuiPrivateNotchedOutline-legend-1012"
                style={
                  Object {
                    "width": 0.01,
                  }
                }
              >
                <span
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "&#8203;",
                    }
                  }
                />
              </legend>
            </fieldset>
            <input
              aria-invalid={false}
              className="MuiInputBase-input-1005 MuiOutlinedInput-input-990"
              disabled={false}
              name="passwordConfirmInputField"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Confirm Password"
              required={true}
              type="password"
            />
          </div>
        </div>
      </div>
      <div
        className="MuiBox-root-921 MuiBox-root-1015"
      >
        <div
          className="MuiBox-root-921 MuiBox-root-1016"
        >
          <button
            className="MuiButtonBase-root-1034 MuiButton-root-1017 MuiButton-text-1019 MuiButton-textPrimary-1020 MuiButton-fullWidth-1033"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiButton-label-1018"
            >
              Back
            </span>
          </button>
        </div>
        <div
          className="MuiBox-root-921 MuiBox-root-1037"
        >
          <button
            className="MuiButtonBase-root-1034 MuiButtonBase-disabled-1035 MuiButton-root-1017 MuiButton-contained-1025 MuiButton-containedPrimary-1026 MuiButton-disabled-1029 MuiButton-fullWidth-1033"
            disabled={true}
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="-1"
            type="submit"
          >
            <span
              className="MuiButton-label-1018"
            >
              Continue
            </span>
          </button>
        </div>
      </div>
    </form>
  </div>
  <div
    className="MuiBox-root-921 MuiBox-root-1038"
  />
  <div
    className="MuiBox-root-921 MuiBox-root-1039"
  >
    <img
      alt="IOV logo"
      className="makeStyles-root-1040"
      height={39}
      src="iov-logo.png"
      width={84}
    />
  </div>
</div>
`;

exports[`Storyshots Routes/Signup Recovery Phrase page 1`] = `
<div
  className="MuiBox-root-1055 MuiBox-root-1056"
  id="/signup2"
>
  <div
    className="MuiBox-root-1055 MuiBox-root-1057"
  >
    <h4
      className="MuiTypography-root-1060 MuiTypography-h4-1068 MuiTypography-colorPrimary-1083 makeStyles-inline-1058"
    >
      New
    </h4>
    <h4
      className="MuiTypography-root-1060 MuiTypography-h4-1068 makeStyles-inline-1058"
    >
       
      Account
    </h4>
  </div>
  <div
    className="MuiBox-root-1055 MuiBox-root-1090"
  >
    <div
      className="MuiBox-root-1055 MuiBox-root-1091"
    >
      <div
        className="MuiBox-root-1055 MuiBox-root-1092"
      >
        <div
          className="MuiBox-root-1055 MuiBox-root-1093"
        >
          <h6
            className="MuiTypography-root-1060 MuiTypography-subtitle2-1072 makeStyles-inline-1058"
          >
            Activate Recovery Phrase?
          </h6>
        </div>
        <div
          className="makeStyles-container-1095"
          onClick={[Function]}
        >
          <img
            alt="Info"
            className="makeStyles-root-1098"
            height={16}
            src="info_normal.svg"
            width={16}
          />
        </div>
      </div>
      <label
        className="MuiFormControlLabel-root-1103"
      >
        <span
          className="MuiSwitch-root-1109"
        >
          <span
            aria-disabled={false}
            className="MuiButtonBase-root-1131 MuiIconButton-root-1122 MuiPrivateSwitchBase-root-1118 MuiSwitch-switchBase-1110 MuiSwitch-colorPrimary-1111"
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex={null}
          >
            <span
              className="MuiIconButton-label-1130"
            >
              <span
                className="MuiSwitch-thumb-1116"
              />
              <input
                className="MuiPrivateSwitchBase-input-1121 MuiSwitch-input-1115"
                onChange={[Function]}
                type="checkbox"
              />
            </span>
          </span>
          <span
            className="MuiSwitch-track-1117"
          />
        </span>
        <span
          className="MuiTypography-root-1060 MuiTypography-body1-1062 MuiFormControlLabel-label-1108"
        />
      </label>
    </div>
    <div
      className="MuiBox-root-1055 MuiBox-root-1134"
    >
      <p
        className="MuiTypography-root-1060 MuiTypography-body1-1062 makeStyles-inline-1058"
      >
        
      </p>
    </div>
    <div
      className="MuiBox-root-1055 MuiBox-root-1135"
    >
      <div
        className="MuiBox-root-1055 MuiBox-root-1136"
      >
        <button
          className="MuiButtonBase-root-1131 MuiButton-root-1137 MuiButton-text-1139 MuiButton-textPrimary-1140 MuiButton-fullWidth-1153"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-1138"
          >
            Back
          </span>
        </button>
      </div>
      <div
        className="MuiBox-root-1055 MuiBox-root-1154"
      >
        <button
          className="MuiButtonBase-root-1131 MuiButton-root-1137 MuiButton-contained-1145 MuiButton-containedPrimary-1146 MuiButton-fullWidth-1153"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-1138"
          >
            Continue
          </span>
        </button>
      </div>
    </div>
  </div>
  <div
    className="MuiBox-root-1055 MuiBox-root-1155"
  />
  <div
    className="MuiBox-root-1055 MuiBox-root-1156"
  >
    <img
      alt="IOV logo"
      className="makeStyles-root-1098"
      height={39}
      src="iov-logo.png"
      width={84}
    />
  </div>
</div>
`;

exports[`Storyshots Routes/Signup Security hint page 1`] = `
<div
  className="MuiBox-root-1167 MuiBox-root-1168"
  id="/signup3"
>
  <div
    className="MuiBox-root-1167 MuiBox-root-1169"
  >
    <h4
      className="MuiTypography-root-1172 MuiTypography-h4-1180 MuiTypography-colorPrimary-1195 makeStyles-inline-1170"
    >
      New
    </h4>
    <h4
      className="MuiTypography-root-1172 MuiTypography-h4-1180 makeStyles-inline-1170"
    >
       
      Account
    </h4>
  </div>
  <div
    className="MuiBox-root-1167 MuiBox-root-1202"
  >
    <h6
      className="MuiTypography-root-1172 MuiTypography-subtitle1-1183 makeStyles-inline-1170"
    >
      To help you remember your details in the future please provide a security hint:
    </h6>
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiBox-root-1167 MuiBox-root-1203"
      >
        <div
          className="MuiFormControl-root-1205 MuiFormControl-marginNormal-1206 MuiFormControl-fullWidth-1208 MuiTextField-root-1204"
        >
          <div
            className="MuiInputBase-root-1222 MuiOutlinedInput-root-1209 MuiInputBase-fullWidth-1231 MuiInputBase-formControl-1223"
            onClick={[Function]}
          >
            <fieldset
              aria-hidden={true}
              className="MuiPrivateNotchedOutline-root-1238 MuiOutlinedInput-notchedOutline-1216"
              style={
                Object {
                  "paddingLeft": 8,
                }
              }
            >
              <legend
                className="MuiPrivateNotchedOutline-legend-1239"
                style={
                  Object {
                    "width": 0.01,
                  }
                }
              >
                <span
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "&#8203;",
                    }
                  }
                />
              </legend>
            </fieldset>
            <input
              aria-invalid={false}
              className="MuiInputBase-input-1232 MuiOutlinedInput-input-1217"
              disabled={false}
              name="securityHintField"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Security hint"
              required={false}
              type="text"
            />
          </div>
        </div>
      </div>
      <div
        className="MuiBox-root-1167 MuiBox-root-1240"
      >
        <div
          className="MuiBox-root-1167 MuiBox-root-1241"
        >
          <button
            className="MuiButtonBase-root-1259 MuiButton-root-1242 MuiButton-text-1244 MuiButton-textPrimary-1245 MuiButton-fullWidth-1258"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiButton-label-1243"
            >
              Back
            </span>
          </button>
        </div>
        <div
          className="MuiBox-root-1167 MuiBox-root-1262"
        >
          <button
            className="MuiButtonBase-root-1259 MuiButton-root-1242 MuiButton-contained-1250 MuiButton-containedPrimary-1251 MuiButton-fullWidth-1258"
            disabled={false}
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="submit"
          >
            <span
              className="MuiButton-label-1243"
            >
              Create
            </span>
          </button>
        </div>
      </div>
    </form>
  </div>
  <div
    className="MuiBox-root-1167 MuiBox-root-1263"
  />
  <div
    className="MuiBox-root-1167 MuiBox-root-1264"
  >
    <img
      alt="IOV logo"
      className="makeStyles-root-1265"
      height={39}
      src="iov-logo.png"
      width={84}
    />
  </div>
</div>
`;

exports[`Storyshots Routes/Welcome Welcome page 1`] = `
<div
  className="MuiBox-root-1280 MuiBox-root-1281"
  id="/welcome"
>
  <div
    className="MuiBox-root-1280 MuiBox-root-1282"
  >
    <h4
      className="MuiTypography-root-1285 MuiTypography-h4-1293 MuiTypography-colorPrimary-1308 makeStyles-inline-1283"
    >
      Welcome
    </h4>
    <h4
      className="MuiTypography-root-1285 MuiTypography-h4-1293 makeStyles-inline-1283"
    >
       
      to your IOV manager
    </h4>
  </div>
  <div
    className="MuiBox-root-1280 MuiBox-root-1315"
  >
    <p
      className="MuiTypography-root-1285 MuiTypography-body1-1287 makeStyles-inline-1283"
    >
      This plugin lets you manage all your accounts in one place.
    </p>
    <div
      className="MuiBox-root-1280 MuiBox-root-1316"
    />
    <button
      className="MuiButtonBase-root-1334 MuiButton-root-1317 MuiButton-contained-1325 MuiButton-containedPrimary-1326 MuiButton-fullWidth-1333"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-1318"
      >
        Log in
      </span>
    </button>
    <div
      className="MuiBox-root-1280 MuiBox-root-1337"
    />
    <button
      className="MuiButtonBase-root-1334 MuiButton-root-1317 MuiButton-contained-1325 MuiButton-containedPrimary-1326 MuiButton-fullWidth-1333"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-1318"
      >
        New account
      </span>
    </button>
    <div
      className="MuiBox-root-1280 MuiBox-root-1338"
    />
    <button
      className="MuiButtonBase-root-1334 MuiButton-root-1317 MuiButton-contained-1325 MuiButton-containedPrimary-1326 MuiButton-fullWidth-1333"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-1318"
      >
        Import account
      </span>
    </button>
  </div>
  <div
    className="MuiBox-root-1280 MuiBox-root-1339"
  />
  <div
    className="MuiBox-root-1280 MuiBox-root-1340"
  >
    <img
      alt="IOV logo"
      className="makeStyles-root-1341"
      height={39}
      src="iov-logo.png"
      width={84}
    />
  </div>
</div>
`;
